# suidrop

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  install.sh
.github/workflows/: backend.yml  release.yml
db/: README.md
db/migrations/: 0001_init.sql
frontend/: app.html  index.html  landing.html  sui.js
move/suidrop/: DEPLOY.md  Move.toml  Published.toml
move/suidrop/sources/: receipt.move
src/: main.rs
src/cli/: main.rs
