[package]
name = "suidrop"
version = "0.1.3"
edition = "2021"
description = "SuiDrop, trustless, end-to-end encrypted file transfer on Walrus + Sui, powered by Tatum."

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
rand = "0.8"

dialoguer = { version = "0.11", optional = true }
indicatif = { version = "0.17", optional = true }
console = { version = "0.15", optional = true }
aes-gcm = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
toml = { version = "0.8", optional = true }
dirs = { version = "5", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
cli = [
    "dep:dialoguer",
    "dep:indicatif",
    "dep:console",
    "dep:aes-gcm",
    "dep:base64",
    "dep:toml",
    "dep:dirs",
    "dep:sha2",
    "reqwest/blocking",
]

[[bin]]
name = "suidrop"
path = "src/main.rs"

[[bin]]
name = "suidrop-cli"
path = "src/cli/main.rs"
required-features = ["cli"]
